upgrade confluent libraries