@@ -23,7 +23,7 @@ repositories {
 dependencies {
     // for type inference
     annotationProcessor 'org.projectlombok:lombok:1.18.16'
-    compileOnly 'org.projectlombok:lombok:1.18.12'
+    compileOnly 'org.projectlombok:lombok:1.18.16'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
     testCompileOnly 'org.projectlombok:lombok:1.18.16'
 
@@ -41,8 +41,8 @@ dependencies {
 
     // avro
     implementation 'org.apache.avro:avro:1.10.1'
-    implementation 'io.confluent:kafka-streams-avro-serde:5.5.2'
-    implementation 'io.confluent:kafka-avro-serializer:5.5.2'
+    implementation 'io.confluent:kafka-streams-avro-serde:6.0.1'
+    implementation 'io.confluent:kafka-avro-serializer:6.0.1'
 
     // others
     implementation 'com.google.guava:guava:30.1-jre'
@@ -58,11 +58,22 @@ compileJava.dependsOn tasks.googleJavaFormat
 
 test {
     useJUnitPlatform()
+
+    if (System.getProperty('DEBUG', 'false') == 'true') {
+        jvmArgs '-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005'
+    }
 }
 
 avro {
   dateTimeLogicalType = 'JSR310'
   createOptionalGetters = true
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+    if (System.getProperty('DEBUG', 'false') == 'true') {
+        jvmArgs '-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005'
+    }
 }
 
 task runEventStreamsDSL(type: JavaExec) {
